compiler/antlr_files/GramParser.py
# Generated from Gram.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramParser ( Parser ):

    grammarFileName = "Gram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "'void'", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'if'", "'else'", 
                     "'do'", "'while'", "'return'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "','", "'&'", "'const'", "'print'" ]

    symbolicNames = [ "<INVALID>", "EQUAL_SIGN", "TYPE", "VOID", "SEMICOLON", 
                      "OP_ADDITIVE", "OP_MULTIPLICATIVE", "OP_INPLACE", 
                      "OP_COMPARATIVE", "IF", "ELSE", "DO", "WHILE", "RETURN", 
                      "OPENPAREN", "CLOSEPAREN", "OPENSQUARE", "CLOSESQUARE", 
                      "OPENCURLY", "CLOSECURLY", "COMMA", "ECOMMERCIAL", 
                      "CONST", "PRINT_TOKEN", "INT", "FLOAT", "ID", "WS" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_functionImpl = 2
    RULE_functionCall = 3
    RULE_fargs = 4
    RULE_aargs = 5
    RULE_body = 6
    RULE_stmt = 7
    RULE_varDecl = 8
    RULE_assignment = 9
    RULE_reAssign = 10
    RULE_ipAssign = 11
    RULE_condStat = 12
    RULE_doWhile = 13
    RULE_returnStmt = 14
    RULE_num = 15
    RULE_expr = 16
    RULE_print = 17

    ruleNames =  [ "program", "functionDecl", "functionImpl", "functionCall", 
                   "fargs", "aargs", "body", "stmt", "varDecl", "assignment", 
                   "reAssign", "ipAssign", "condStat", "doWhile", "returnStmt", 
                   "num", "expr", "print" ]

    EOF = Token.EOF
    EQUAL_SIGN=1
    TYPE=2
    VOID=3
    SEMICOLON=4
    OP_ADDITIVE=5
    OP_MULTIPLICATIVE=6
    OP_INPLACE=7
    OP_COMPARATIVE=8
    IF=9
    ELSE=10
    DO=11
    WHILE=12
    RETURN=13
    OPENPAREN=14
    CLOSEPAREN=15
    OPENSQUARE=16
    CLOSESQUARE=17
    OPENCURLY=18
    CLOSECURLY=19
    COMMA=20
    ECOMMERCIAL=21
    CONST=22
    PRINT_TOKEN=23
    INT=24
    FLOAT=25
    ID=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GramParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(GramParser.FunctionDeclContext,i)


        def functionImpl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.FunctionImplContext)
            else:
                return self.getTypedRuleContext(GramParser.FunctionImplContext,i)


        def getRuleIndex(self):
            return GramParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GramParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.functionDecl()
                    pass

                elif la_ == 2:
                    self.state = 37
                    self.functionImpl()
                    pass


                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==3):
                    break

            self.state = 42
            self.match(GramParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(GramParser.TYPE, 0)

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def OPENPAREN(self):
            return self.getToken(GramParser.OPENPAREN, 0)

        def CLOSEPAREN(self):
            return self.getToken(GramParser.CLOSEPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(GramParser.SEMICOLON, 0)

        def fargs(self):
            return self.getTypedRuleContext(GramParser.FargsContext,0)


        def VOID(self):
            return self.getToken(GramParser.VOID, 0)

        def getRuleIndex(self):
            return GramParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = GramParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(GramParser.TYPE)
                self.state = 45
                self.match(GramParser.ID)
                self.state = 46
                self.match(GramParser.OPENPAREN)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2 or _la==22:
                    self.state = 47
                    self.fargs()


                self.state = 50
                self.match(GramParser.CLOSEPAREN)
                self.state = 51
                self.match(GramParser.SEMICOLON)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(GramParser.VOID)
                self.state = 53
                self.match(GramParser.ID)
                self.state = 54
                self.match(GramParser.OPENPAREN)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2 or _la==22:
                    self.state = 55
                    self.fargs()


                self.state = 58
                self.match(GramParser.CLOSEPAREN)
                self.state = 59
                self.match(GramParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionImplContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(GramParser.TYPE, 0)

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def OPENPAREN(self):
            return self.getToken(GramParser.OPENPAREN, 0)

        def CLOSEPAREN(self):
            return self.getToken(GramParser.CLOSEPAREN, 0)

        def OPENCURLY(self):
            return self.getToken(GramParser.OPENCURLY, 0)

        def CLOSECURLY(self):
            return self.getToken(GramParser.CLOSECURLY, 0)

        def fargs(self):
            return self.getTypedRuleContext(GramParser.FargsContext,0)


        def body(self):
            return self.getTypedRuleContext(GramParser.BodyContext,0)


        def VOID(self):
            return self.getToken(GramParser.VOID, 0)

        def getRuleIndex(self):
            return GramParser.RULE_functionImpl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionImpl" ):
                listener.enterFunctionImpl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionImpl" ):
                listener.exitFunctionImpl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionImpl" ):
                return visitor.visitFunctionImpl(self)
            else:
                return visitor.visitChildren(self)




    def functionImpl(self):

        localctx = GramParser.FunctionImplContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionImpl)
        self._la = 0 # Token type
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(GramParser.TYPE)
                self.state = 63
                self.match(GramParser.ID)
                self.state = 64
                self.match(GramParser.OPENPAREN)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2 or _la==22:
                    self.state = 65
                    self.fargs()


                self.state = 68
                self.match(GramParser.CLOSEPAREN)
                self.state = 69
                self.match(GramParser.OPENCURLY)
                self.state = 71
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 70
                    self.body()


                self.state = 73
                self.match(GramParser.CLOSECURLY)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(GramParser.VOID)
                self.state = 75
                self.match(GramParser.ID)
                self.state = 76
                self.match(GramParser.OPENPAREN)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2 or _la==22:
                    self.state = 77
                    self.fargs()


                self.state = 80
                self.match(GramParser.CLOSEPAREN)
                self.state = 81
                self.match(GramParser.OPENCURLY)
                self.state = 83
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 82
                    self.body()


                self.state = 85
                self.match(GramParser.CLOSECURLY)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def OPENPAREN(self):
            return self.getToken(GramParser.OPENPAREN, 0)

        def CLOSEPAREN(self):
            return self.getToken(GramParser.CLOSEPAREN, 0)

        def aargs(self):
            return self.getTypedRuleContext(GramParser.AargsContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = GramParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(GramParser.ID)
            self.state = 89
            self.match(GramParser.OPENPAREN)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 117456896) != 0):
                self.state = 90
                self.aargs()


            self.state = 93
            self.match(GramParser.CLOSEPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FargsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def CONST(self):
            return self.getToken(GramParser.CONST, 0)

        def TYPE(self):
            return self.getToken(GramParser.TYPE, 0)

        def ECOMMERCIAL(self):
            return self.getToken(GramParser.ECOMMERCIAL, 0)

        def COMMA(self):
            return self.getToken(GramParser.COMMA, 0)

        def fargs(self):
            return self.getTypedRuleContext(GramParser.FargsContext,0)


        def OPENSQUARE(self):
            return self.getToken(GramParser.OPENSQUARE, 0)

        def INT(self):
            return self.getToken(GramParser.INT, 0)

        def CLOSESQUARE(self):
            return self.getToken(GramParser.CLOSESQUARE, 0)

        def getRuleIndex(self):
            return GramParser.RULE_fargs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFargs" ):
                listener.enterFargs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFargs" ):
                listener.exitFargs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFargs" ):
                return visitor.visitFargs(self)
            else:
                return visitor.visitChildren(self)




    def fargs(self):

        localctx = GramParser.FargsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fargs)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.match(GramParser.CONST)
                    self.state = 96
                    self.match(GramParser.TYPE)
                    pass

                elif la_ == 2:
                    self.state = 97
                    self.match(GramParser.TYPE)
                    self.state = 98
                    self.match(GramParser.ECOMMERCIAL)
                    pass

                elif la_ == 3:
                    self.state = 99
                    self.match(GramParser.TYPE)
                    pass


                self.state = 102
                self.match(GramParser.ID)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 103
                    self.match(GramParser.COMMA)
                    self.state = 104
                    self.fargs()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(GramParser.TYPE)
                self.state = 108
                self.match(GramParser.ID)
                self.state = 109
                self.match(GramParser.OPENSQUARE)
                self.state = 110
                self.match(GramParser.INT)
                self.state = 111
                self.match(GramParser.CLOSESQUARE)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 112
                    self.match(GramParser.COMMA)
                    self.state = 113
                    self.fargs()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AargsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def COMMA(self):
            return self.getToken(GramParser.COMMA, 0)

        def aargs(self):
            return self.getTypedRuleContext(GramParser.AargsContext,0)


        def num(self):
            return self.getTypedRuleContext(GramParser.NumContext,0)


        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_aargs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAargs" ):
                listener.enterAargs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAargs" ):
                listener.exitAargs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAargs" ):
                return visitor.visitAargs(self)
            else:
                return visitor.visitChildren(self)




    def aargs(self):

        localctx = GramParser.AargsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_aargs)
        self._la = 0 # Token type
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(GramParser.ID)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 119
                    self.match(GramParser.COMMA)
                    self.state = 120
                    self.aargs()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.num()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 124
                    self.match(GramParser.COMMA)
                    self.state = 125
                    self.aargs()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.expr(0)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 129
                    self.match(GramParser.COMMA)
                    self.state = 130
                    self.aargs()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.StmtContext)
            else:
                return self.getTypedRuleContext(GramParser.StmtContext,i)


        def getRuleIndex(self):
            return GramParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = GramParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 125856260) != 0):
                self.state = 135
                self.stmt()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(GramParser.SEMICOLON, 0)

        def varDecl(self):
            return self.getTypedRuleContext(GramParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(GramParser.AssignmentContext,0)


        def condStat(self):
            return self.getTypedRuleContext(GramParser.CondStatContext,0)


        def doWhile(self):
            return self.getTypedRuleContext(GramParser.DoWhileContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(GramParser.ReturnStmtContext,0)


        def print_(self):
            return self.getTypedRuleContext(GramParser.PrintContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GramParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.expr(0)
                self.state = 142
                self.match(GramParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.varDecl()
                self.state = 145
                self.match(GramParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.assignment()
                self.state = 148
                self.match(GramParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.condStat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 151
                self.doWhile()
                self.state = 152
                self.match(GramParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 154
                self.returnStmt()
                self.state = 155
                self.match(GramParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 157
                self.print_()
                self.state = 158
                self.match(GramParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(GramParser.TYPE, 0)

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def EQUAL_SIGN(self):
            return self.getToken(GramParser.EQUAL_SIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def OPENSQUARE(self):
            return self.getToken(GramParser.OPENSQUARE, 0)

        def INT(self):
            return self.getToken(GramParser.INT, 0)

        def CLOSESQUARE(self):
            return self.getToken(GramParser.CLOSESQUARE, 0)

        def getRuleIndex(self):
            return GramParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = GramParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDecl)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(GramParser.TYPE)
                self.state = 163
                self.match(GramParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(GramParser.TYPE)
                self.state = 165
                self.match(GramParser.ID)
                self.state = 166
                self.match(GramParser.EQUAL_SIGN)
                self.state = 167
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.match(GramParser.TYPE)
                self.state = 169
                self.match(GramParser.ID)
                self.state = 170
                self.match(GramParser.OPENSQUARE)
                self.state = 171
                self.match(GramParser.INT)
                self.state = 172
                self.match(GramParser.CLOSESQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ipAssign(self):
            return self.getTypedRuleContext(GramParser.IpAssignContext,0)


        def reAssign(self):
            return self.getTypedRuleContext(GramParser.ReAssignContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = GramParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.ipAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.reAssign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def EQUAL_SIGN(self):
            return self.getToken(GramParser.EQUAL_SIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.ExprContext)
            else:
                return self.getTypedRuleContext(GramParser.ExprContext,i)


        def OPENSQUARE(self):
            return self.getToken(GramParser.OPENSQUARE, 0)

        def CLOSESQUARE(self):
            return self.getToken(GramParser.CLOSESQUARE, 0)

        def getRuleIndex(self):
            return GramParser.RULE_reAssign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReAssign" ):
                listener.enterReAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReAssign" ):
                listener.exitReAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReAssign" ):
                return visitor.visitReAssign(self)
            else:
                return visitor.visitChildren(self)




    def reAssign(self):

        localctx = GramParser.ReAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_reAssign)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.match(GramParser.ID)
                self.state = 180
                self.match(GramParser.EQUAL_SIGN)
                self.state = 181
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.match(GramParser.ID)
                self.state = 183
                self.match(GramParser.OPENSQUARE)
                self.state = 184
                self.expr(0)
                self.state = 185
                self.match(GramParser.CLOSESQUARE)
                self.state = 186
                self.match(GramParser.EQUAL_SIGN)
                self.state = 187
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IpAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramParser.ID, 0)

        def OP_INPLACE(self):
            return self.getToken(GramParser.OP_INPLACE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.ExprContext)
            else:
                return self.getTypedRuleContext(GramParser.ExprContext,i)


        def OPENSQUARE(self):
            return self.getToken(GramParser.OPENSQUARE, 0)

        def CLOSESQUARE(self):
            return self.getToken(GramParser.CLOSESQUARE, 0)

        def getRuleIndex(self):
            return GramParser.RULE_ipAssign
